--- a/app/src/main/res/layout/fragment_driver_chat_list.xml
+++ b/app/src/main/res/layout/fragment_driver_chat_list.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@drawable/shadow_background">
 
@@ -35,11 +35,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_chat_driver"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="1dp"/>
+                    android:layout_marginTop="1dp" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
