--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="right_chat_blue">#405DE6</color>
     <color name="secondary_stroke_blue">#405DE6</color>
     <color name="red">#FA3737</color>
+    <color name="light_pink">#F4E9E9</color>
 
 <!-- About us page color scheme    -->
     <color name="back_ground_color_title">#353f55</color>
