--- a/app/src/main/res/layout/fragment_booking_success.xml
+++ b/app/src/main/res/layout/fragment_booking_success.xml
@@ -4,30 +4,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     tools:context=".Activities.Main.Fragment.Home.BookingSuccessFragment"
     android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    >
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardCornerRadius="30dp"
+
         app:cardElevation="4dp"
         android:layout_margin="8dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/cancelBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/baseline_cancel_24"
+               android:layout_gravity="end"
+                android:padding="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                >
+
+            </ImageView>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Booking Successful"
                 android:textSize="32sp"
+                android:padding="5dp"
                 android:textStyle="bold"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="16dp"/>
+                />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="24dp"
+
+                android:padding="10dp"
                 android:text="Your booking is successfully placed. \nYou can now view the booking status in the app."
                 android:textAlignment="center"/>
             <LinearLayout
@@ -36,21 +63,18 @@
                 android:orientation="horizontal"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginBottom="16dp">
-                <Button
-                    android:id="@+id/back_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginRight="12dp"
-                    android:text="Back to main"/>
+
                 <Button
                     android:id="@+id/booking_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="10dp"
+
                     android:text="VIew booking"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+</LinearLayout>
+
 </LinearLayout>
