--- a/app/src/main/res/layout/user_address_card_view.xml
+++ b/app/src/main/res/layout/user_address_card_view.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
     android:id="@+id/address_list_container"
+    app:cardCornerRadius="20dp"
+    android:backgroundTint="@color/light_pink"
     app:cardElevation="8dp"
     android:layout_margin="8dp">
 
