--- a/app/src/main/res/layout/user_vehicle_card_view.xml
+++ b/app/src/main/res/layout/user_vehicle_card_view.xml
@@ -6,6 +6,8 @@
     app:cardBackgroundColor="@color/white"
     android:id="@+id/vehicle_list_container"
     app:cardElevation="8dp"
+    android:backgroundTint="@color/light_pink"
+    app:cardCornerRadius="20dp"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -28,7 +30,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:layout_marginTop="20dp"
