Profile settings UI update

--- a/app/src/main/res/layout/dialog_forget.xml
+++ b/app/src/main/res/layout/dialog_forget.xml
@@ -17,7 +17,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_x_24"
                 android:layout_marginHorizontal="10dp"
-
+                android:layout_gravity="end"
                 />
 
             <TextView
