--- a/app/src/main/res/layout/fragment_home_list.xml
+++ b/app/src/main/res/layout/fragment_home_list.xml
@@ -6,6 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".Activities.Main.Fragment.Profile.Edit.HomeListFragment"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <ImageView
+            android:id="@+id/buttonBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back_arrow"
+            android:padding="8dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/home"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -14,26 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <ImageView
-        android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_back_arrow"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Home List"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:fontFamily="@font/lobster">
-
-    </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:text=" + New Home"
+        android:text="@string/new_home"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
