--- a/app/src/main/res/layout/fragment_language_settings.xml
+++ b/app/src/main/res/layout/fragment_language_settings.xml
@@ -65,13 +65,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:outlineProvider="none">
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                     <TextView
                         android:id="@+id/english"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:text="@string/english"
                         android:drawablePadding="10dp"
@@ -82,10 +83,8 @@
                         android:id="@+id/english_radio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
                          />
-                    </RelativeLayout>
+                    </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
@@ -98,16 +97,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:outlineProvider="none">
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <TextView
                             android:id="@+id/vietnamese"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:text="@string/Vietnamese"
-                            android:drawablePadding="10dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginBottom="30dp"
                             />
@@ -115,10 +114,8 @@
                             android:id="@+id/vietnamese_radio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
                             />
-                    </RelativeLayout>
+                    </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </ScrollView>
