--- a/app/src/main/res/layout/fragment_sos_list.xml
+++ b/app/src/main/res/layout/fragment_sos_list.xml
@@ -6,25 +6,26 @@
     android:orientation="vertical"
     tools:context=".Activities.Main.Fragment.Profile.Edit.SOSListFragment">
 
-    <ImageView
-        android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_back_arrow"
-        />
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="SOS List"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:fontFamily="@font/lobster">
-
-    </TextView>
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <ImageView
+            android:id="@+id/buttonBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back_arrow"
+            android:padding="8dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sos"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -48,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:text=" + New Emergency Contact"
+        android:text="@string/new_emergency_contact"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
