--- a/app/src/main/res/layout/fragment_vehicle_list.xml
+++ b/app/src/main/res/layout/fragment_vehicle_list.xml
@@ -5,6 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".Activities.Main.Fragment.Profile.Edit.VehicleListFragment"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <ImageView
+            android:id="@+id/buttonBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back_arrow"
+            android:layout_margin="8dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/vehicle"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,26 +35,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_back_arrow"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Vehicle List"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:fontFamily="@font/lobster">
-
-    </TextView>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:text=" + New Vehicle"
+        android:text="@string/new_vehicle"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
