--- a/app/src/main/res/layout/pop_up_address_form.xml
+++ b/app/src/main/res/layout/pop_up_address_form.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:src="@drawable/baseline_cancel_24"
+            android:src="@drawable/icon_x_24"
             android:padding="15dp"
             >
 
@@ -36,17 +36,18 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="Enter Additional Address"
-        android:fontFamily="@font/lobster"
+        android:fontFamily="@font/queensidesmedium"
         android:textStyle="bold"
         android:gravity="center"
         android:textSize="25sp"
+        android:layout_marginTop="-10dp"
        >
 
     </TextView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Address"
+            android:text="@string/address"
             android:textSize="16sp"
             android:layout_marginTop="20dp"
             android:textStyle="bold"
@@ -67,15 +68,15 @@
             android:hint="Click here to select an address"
             android:background="@drawable/custom_edit_text"
             android:padding="10dp"
-            android:drawableLeft="@drawable/ic_home"
             android:drawablePadding="5dp"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            app:drawableLeftCompat="@drawable/ic_home" />
     </androidx.cardview.widget.CardView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Image"
+            android:text="@string/image"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginHorizontal="16dp"
@@ -102,7 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Submit" />
+        android:text="@string/done" />
     </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
