--- a/app/src/main/res/layout/pop_up_sos_form.xml
+++ b/app/src/main/res/layout/pop_up_sos_form.xml
@@ -3,10 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:orientation="vertical">
-
-
     <androidx.cardview.widget.CardView
 
         android:layout_width="match_parent"
@@ -20,19 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
-
             <ImageView
                 android:id="@+id/cancelBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:src="@drawable/baseline_cancel_24"
+                android:src="@drawable/icon_x_24"
                 android:padding="15dp"
-                >
-
-            </ImageView>
-
+                />
 
             <ScrollView
 
@@ -49,10 +41,10 @@
                         android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="-10dp"
                         android:padding="10dp"
                         android:text="Enter Additional Vehicle"
-                        android:fontFamily="@font/lobster"
+                        android:fontFamily="@font/queensidesmedium"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:textSize="25sp">
@@ -62,7 +54,8 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardElevation="4dp">
+                        app:cardElevation="4dp"
+                        android:outlineProvider="none">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
