--- a/app/src/main/res/layout/pop_up_vehicle_form.xml
+++ b/app/src/main/res/layout/pop_up_vehicle_form.xml
@@ -49,10 +49,10 @@
                     android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="-10dp"
                     android:padding="10dp"
                     android:text="Enter Additional Vehicle"
-                    android:fontFamily="@font/lobster"
+                    android:fontFamily="@font/queensidesmedium"
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="25sp">
@@ -74,7 +74,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Brand"
+                            android:text="@string/brand"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:padding="5dp"
@@ -92,7 +92,7 @@
                                 android:id="@+id/vehicle_brand_edit_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="Brand"
+                                android:hint="@string/brand"
                                 android:background="@drawable/custom_edit_text"
                                 android:padding="10dp"
                                 android:textSize="18sp"/>
@@ -101,7 +101,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Name"
+                            android:text="@string/name"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_marginHorizontal="16dp"
@@ -118,7 +118,7 @@
                                 android:id="@+id/vehicle_name_edit_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="Name"
+                                android:hint="@string/name"
                                 android:background="@drawable/custom_edit_text"
                                 android:padding="10dp"
                                 android:textSize="18sp"/>
@@ -127,7 +127,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Color"
+                            android:text="@string/color"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_marginHorizontal="16dp"
@@ -144,7 +144,7 @@
                                 android:id="@+id/vehicle_color_edit_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="Color"
+                                android:hint="@string/color"
                                 android:background="@drawable/custom_edit_text"
                                 android:padding="10dp"
                                 android:textSize="18sp"/>
@@ -153,7 +153,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Seat Capacity"
+                            android:text="@string/seat_capacity"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_marginHorizontal="16dp"
@@ -171,7 +171,7 @@
                                 android:id="@+id/seat_capacity_spinner"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="Seat Capacity"
+                                android:hint="@string/seat_capacity"
                                 android:background="@drawable/custom_edit_text"
                                 android:textSize="18sp"
                                 android:paddingHorizontal="8dp"
@@ -182,7 +182,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Number Plate"
+                            android:text="@string/number_plate"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_marginHorizontal="16dp"
@@ -191,7 +191,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Ex: 50-K 12345"
+                            android:text="@string/ex_50_k_12345"
                             android:textSize="16sp"
                             android:textStyle="italic"
                             android:layout_marginHorizontal="16dp"
@@ -208,7 +208,7 @@
                                 android:id="@+id/vehicle_number_plate_edit_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="Number Plate"
+                                android:hint="@string/number_plate"
                                 android:background="@drawable/custom_edit_text"
                                 android:padding="10dp"
                                 android:textSize="18sp"/>
@@ -217,7 +217,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Image"
+                            android:text="@string/image"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             android:layout_marginHorizontal="16dp"
@@ -244,7 +244,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
-                            android:text="Submit" />
+                            android:text="@string/done" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
