--- a/app/src/main/res/layout/user_address_card_view.xml
+++ b/app/src/main/res/layout/user_address_card_view.xml
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Set as default"
+                android:text="@string/set_as_default"
                 >
 
             </com.google.android.material.button.MaterialButton>
@@ -83,7 +83,7 @@
                     android:id="@+id/edit_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Edit"
+                    android:text="@string/edit"
                     android:layout_weight="1"
                     android:layout_marginRight="8dp"
                     android:backgroundTint="@color/quantum_googgreen"/>
@@ -91,7 +91,7 @@
                     android:id="@+id/delete_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Delete"
+                    android:text="@string/delete"
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
                     android:backgroundTint="@color/light_orange_red"/>
