--- a/app/src/main/res/layout/user_vehicle_card_view.xml
+++ b/app/src/main/res/layout/user_vehicle_card_view.xml
@@ -69,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="Set as default"
+                    android:text="@string/set_as_default"
                     >
 
                 </com.google.android.material.button.MaterialButton>
@@ -82,7 +82,7 @@
                     android:id="@+id/edit_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Edit"
+                    android:text="@string/edit"
                     android:padding="5dp"
                     android:layout_marginRight="5dp"
                     android:backgroundTint="@color/quantum_googgreen"/>
@@ -92,7 +92,8 @@
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="Delete"
+                    android:text="@string/delete"
+                    android:layout_marginBottom="10dp"
 
 
                     android:backgroundTint="@color/light_orange_red"/>
