--- a/app/src/main/res/layout/fragment_booking_success.xml
+++ b/app/src/main/res/layout/fragment_booking_success.xml
@@ -47,6 +47,7 @@
                 android:text="Booking Successful"
                 android:textSize="32sp"
                 android:padding="5dp"
+                android:fontFamily="@font/instagramsansregular"
                 android:textStyle="bold"
                 android:gravity="center_horizontal"
                 />
