--- a/app/src/main/res/layout/user_vehicle_card_view.xml
+++ b/app/src/main/res/layout/user_vehicle_card_view.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
     android:id="@+id/vehicle_list_container"
+    app:strokeColor="@color/black"
     app:cardElevation="8dp"
     android:backgroundTint="@color/light_pink"
     app:cardCornerRadius="20dp"
@@ -17,14 +18,21 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="200dp"
+                android:layout_margin="8dp"
+                app:strokeColor="@color/black"
+                app:cardCornerRadius="20dp"
+                android:layout_height="match_parent">
+
 
             <ImageView
                 android:id="@+id/vehicleImageView"
                 android:layout_width="200dp"
                 android:scaleType="centerCrop"
-                android:layout_margin="8dp"
                 android:layout_height="match_parent"
                 />
+            </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
 
         <LinearLayout
@@ -107,4 +115,4 @@
     </LinearLayout>
 
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
