--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,11 @@
     <color name="right_chat_blue">#405DE6</color>
     <color name="secondary_stroke_blue">#405DE6</color>
     <color name="red">#FA3737</color>
-    <color name="light_pink">#F4E9E9</color>
+    <color name="orange">#EC5109</color>
+    <color name="light_pink">#F8F1F1</color>
+    <color name="yellow">#FFC107</color>
+    <color name="green">#4CAF50</color>
+
 
 <!-- About us page color scheme    -->
     <color name="back_ground_color_title">#353f55</color>
