--- a/app/src/main/res/layout/dialog_forget.xml
+++ b/app/src/main/res/layout/dialog_forget.xml
@@ -23,13 +23,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/instagramsansregular"
                 android:gravity="center"
                 android:text="@string/find_your_email"
-                android:fontFamily="@font/instagramsansregular"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                />
+                android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
