--- a/app/src/main/res/layout/fragment_booking_detail.xml
+++ b/app/src/main/res/layout/fragment_booking_detail.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Booking Detail"
-            android:fontFamily="@font/instagramsansregular"
+            android:fontFamily="@font/queensidesmedium"
             android:textSize="32sp"
             android:textStyle="bold"
             android:gravity="center_horizontal"/>
