--- a/app/src/main/res/layout/fragment_confirm_booking.xml
+++ b/app/src/main/res/layout/fragment_confirm_booking.xml
@@ -28,7 +28,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Booking"
+                    android:text="@string/booking"
+                    android:fontFamily="@font/queensidesmedium"
                     android:textSize="38sp"
                     android:textStyle="bold"
                     android:gravity="center_horizontal"
