--- a/app/src/main/res/layout/fragment_main_profile.xml
+++ b/app/src/main/res/layout/fragment_main_profile.xml
@@ -13,10 +13,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center_horizontal">
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardCornerRadius="0dp"
+
+                app:cardBackgroundColor="@color/pale_light_blue"
+                app:strokeColor="@color/black"
                 app:cardElevation="4dp">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -57,20 +61,42 @@
                         android:src="@drawable/ic_chevron_right"
                         android:background="@android:color/transparent" />
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="32dp"
+
                 >
-                <androidx.cardview.widget.CardView
+
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="0dp"
+                    app:strokeColor="@color/black"
+                    app:cardBackgroundColor="@color/white"
+                    >
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+
+                <com.google.android.material.card.MaterialCardView
                     android:id="@+id/settings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="3dp"
+                    app:cardBackgroundColor="@color/white"
+                    android:layout_marginTop="0dp"
+
+                    app:cardCornerRadius="0dp"
+
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -99,13 +125,16 @@
                             android:src="@drawable/ic_chevron_right"
                             android:background="@android:color/transparent" />
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
+                </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.card.MaterialCardView
                     android:id="@+id/about_us"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="3dp">
+                    app:cardBackgroundColor="@color/white"
+
+                    app:cardCornerRadius="0dp"
+
+                    >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -133,13 +162,16 @@
                             android:src="@drawable/ic_chevron_right"
                             android:background="@android:color/transparent" />
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
+                </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.card.MaterialCardView
                     android:id="@+id/help"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="3dp">
+
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="0dp"
+
+                    android:layout_marginBottom="0dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -166,8 +198,12 @@
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_chevron_right"
                             android:background="@android:color/transparent" />
+
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                </com.google.android.material.card.MaterialCardView>
+
+                </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/logout"
                     android:layout_width="match_parent"
