--- a/app/src/main/res/layout/pop_up_booking_success.xml
+++ b/app/src/main/res/layout/pop_up_booking_success.xml
@@ -43,7 +43,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Booking Successful"
+                    android:text="@string/booking_successful"
+                    android:fontFamily="@font/instagramsansregular"
                     android:textSize="32sp"
                     android:padding="5dp"
                     android:textStyle="bold"
@@ -54,7 +55,7 @@
                     android:layout_height="wrap_content"
 
                     android:padding="10dp"
-                    android:text="Your booking is successfully placed. \nYou can now view the booking status in the app."
+                    android:text="@string/your_booking_is_successfully_placed_nyou_can_now_view_the_booking_status_in_the_app"
                     android:textAlignment="center"/>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -70,7 +71,7 @@
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
 
-                        android:text="VIew booking"/>
+                        android:text="@string/view_booking"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
