--- a/app/src/main/res/layout/pop_up_map.xml
+++ b/app/src/main/res/layout/pop_up_map.xml
@@ -32,8 +32,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="Select An Address"
-                android:fontFamily="@font/lobster"
+                android:text="@string/select_an_address"
+                android:fontFamily="@font/queensidesmedium"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:textSize="25sp"
@@ -54,9 +54,9 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/custom_edit_text"
                     android:padding="10dp"
-                    android:drawableLeft="@drawable/ic_home"
                     android:drawablePadding="5dp"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    app:drawableLeftCompat="@drawable/ic_home" />
             </androidx.cardview.widget.CardView>
 
 
