--- a/app/src/main/res/layout/user_address_card_view.xml
+++ b/app/src/main/res/layout/user_address_card_view.xml
@@ -72,7 +72,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:padding="5dp"
-
+                android:text="@string/set_as_default"
+                android:layout_marginBottom="3dp"
                 android:textSize="18sp"
                 android:textColor="@color/light_orange_red"
                 >
@@ -88,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginBottom="5dp"
-                android:text="Set as default"
+                android:text="@string/set_as_default"
                 >
 
             </com.google.android.material.button.MaterialButton>
@@ -102,7 +103,7 @@
                     android:id="@+id/edit_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Edit"
+                    android:text="@string/edit"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
 
@@ -111,7 +112,7 @@
                     android:id="@+id/delete_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Delete"
+                    android:text="@string/delete"
                     android:layout_weight="1"
 
                     android:backgroundTint="@color/light_orange_red"/>
