--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="light_pink">#F8F1F1</color>
     <color name="yellow">#FFC107</color>
     <color name="green">#4CAF50</color>
+    <color name="pale_light_blue">#EFF9FA</color>
 
 
     <!-- About us page color scheme    -->
